--- a/progress.html
+++ b/progress.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>UNST - Progress</title>
-        <link rel="stylesheet" href="./IEEE_Software_Req_Spec/style.css">
+        <link rel="stylesheet" href="style.css">
         <link rel="icon" href="logo5.png" icon="image/png">
     </head>
 </html>
