--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
                         Specifications 
                     </a> 
                 </li>
+                <li>
+                    <a href="https://github.com/robertadriang/Tehnologii_Web">
+                        Project GitHub Repo
+                    </a>
+                </li>
 
 
             </ol>
